--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -18,3 +18,4 @@ jobs:
           SHOW_TIMEZONE: "False"
           SHOW_OS: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_SHORT_INFO: "False"
