--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -19,3 +19,4 @@ jobs:
           SHOW_OS: "False"
           SHOW_LOC_CHART: "False"
           SHOW_SHORT_INFO: "False"
+          SHOW_COMMIT: "False"
