--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -20,3 +20,4 @@ jobs:
           SHOW_LOC_CHART: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_COMMIT: "False"
+          SHOW_LINES_OF_CODE: "True"
