--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -14,10 +14,10 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_DAYS_OF_WEEK: "False"
-          SHOW_TIMEZONE: "False"
-          SHOW_OS: "False"
-          SHOW_LOC_CHART: "False"
-          SHOW_SHORT_INFO: "False"
-          SHOW_COMMIT: "False"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_TIMEZONE: "True"
+          SHOW_OS: "True"
+          SHOW_LOC_CHART: "True"
+          SHOW_SHORT_INFO: "True"
+          SHOW_COMMIT: "True"
           SHOW_LINES_OF_CODE: "True"
