--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -17,7 +17,7 @@ jobs:
           SHOW_DAYS_OF_WEEK: "True"
           SHOW_TIMEZONE: "True"
           SHOW_OS: "True"
-          SHOW_LOC_CHART: "True"
+          SHOW_LOC_CHART: "False"
           SHOW_SHORT_INFO: "True"
           SHOW_COMMIT: "True"
           SHOW_LINES_OF_CODE: "True"
