--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -13,11 +13,10 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_DAYS_OF_WEEK: "True"
-          SHOW_TIMEZONE: "True"
-          SHOW_OS: "True"
+          SHOW_DAYS_OF_WEEK: "Flase"
+          SHOW_TIMEZONE: "Flase"
+          SHOW_OS: "Flase"
           SHOW_LOC_CHART: "False"
           SHOW_SHORT_INFO: "True"
           SHOW_COMMIT: "True"
