--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -18,6 +18,7 @@ jobs:
           SHOW_TIMEZONE: "Flase"
           SHOW_OS: "Flase"
           SHOW_LOC_CHART: "False"
-          SHOW_SHORT_INFO: "True"
-          SHOW_COMMIT: "True"
+          SHOW_SHORT_INFO: "False"
+          SHOW_COMMIT: "False"
           SHOW_LINES_OF_CODE: "True"
+          SHOW_PROFILE_VIEWS: "True"
