--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -14,11 +14,15 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_DAYS_OF_WEEK: "Flase"
-          SHOW_TIMEZONE: "Flase"
-          SHOW_OS: "Flase"
-          SHOW_LOC_CHART: "False"
-          SHOW_SHORT_INFO: "False"
-          SHOW_COMMIT: "False"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_PROFILE_VIEWS: "True"
+          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
+          SHOW_TITLE: true
+          SHOW_DAYS_OF_WEEK: false
+          SHOW_TIMEZONE: false
+          SHOW_OS: false
+          SHOW_LOC_CHART: false
+          SHOW_SHORT_INFO: false
+          SHOW_COMMIT: false
+          SHOW_LANGUAGE: true
+          SHOW_LINES_OF_CODE: true
+          SHOW_PROFILE_VIEWS: true
+  
