--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -10,13 +10,11 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-#     - uses: anmol098/waka-readme-stats@master
-      - uses: athul/waka-readme@master
+      - uses: anmol098/waka-readme-stats@master
+#       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          API_BASE_URL: https://wakapi.dev/api
-          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
           SHOW_TITLE: true
           SHOW_DAYS_OF_WEEK: false
           SHOW_TIMEZONE: false
